--- a/style1.css
+++ b/style1.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+
 *{
     margin: 0;
     padding: 0;
@@ -20,7 +21,7 @@ img{
 }
 
 h2{
-    font-weight: 400;
+    font-weight: 400px;
 }
 
 nav{
@@ -32,25 +33,9 @@ nav{
     position: absolute;
     top: 16px;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%);
     border-radius: 16px;
     padding: 12px;
-}
-
-nav .logo{
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-
-nav .logo img{
-    width: 40px;
-    height: 40px;
-}
-
-nav .logo a{
-    color:#000;
-    font-weight: 600;
 }
 
 nav .nav-links{
@@ -59,7 +44,7 @@ nav .nav-links{
 }
 
 nav .nav-links a{
-    font-size: 14px;
+    font-size: 20px;
     color: #606060;
     transition: all 0.3s ease;
 }
@@ -83,10 +68,10 @@ nav button{
     transition: all 0.3s ease;
 }
 
-nav button:hover,
-.hero .left-section .top .buttons button.doc:hover,
-.contact .items .item button:hover{
-    color:#000;
+nav button:hover, .hero .left-section .top 
+.buttons button.doc:hover, .contact .items 
+.item button:hover{
+    color: #000;
     background: #fff;
     border-color: #dedede;
 }
@@ -96,7 +81,7 @@ nav button i{
 }
 
 .hero{
-    margin-top: 80px;
+    margin-top: 60px;
     height: calc(100vh - 80px);
     padding: 0 60px;
     display: flex;
@@ -105,15 +90,24 @@ nav button i{
     gap: 30px;
 }
 
-.hero > img{
+.hero  img{
     max-width: 580px;
-    width: 50%;
+    width: 700%;
     border-radius: 26px;
 }
 
 .hero .left-section .top h1{
-    font-size: 50px;
+    font-size: 35px;
     margin-bottom: 24px;
+    color: #383c4181;
+    margin-left: 35px;
+    margin-top: 10px;
+}
+
+.hero .logo{
+    width: 100px;
+    height: 100px;
+    margin-bottom: 50px;
 }
 
 .hero .left-section .top h2{
@@ -122,47 +116,50 @@ nav button i{
 }
 
 .hero .left-section .top p{
-    color: #606060;
-    font-size: 18px;
-    margin-bottom: 24px;
+    color: #000b;
+    font-size: 20px;
+    margin-bottom: 30px;
     text-align: justify;
+    margin-left: 35px;
 }
 
 .hero .left-section .top .buttons{
     display: flex;
-    gap: 8px;
+    gap: 20px;
+    margin-left: 20px;
 }
 
 .hero .left-section .top .buttons button,
 .projects .inner > button,
 .contact .items .item button{
-    font-size: 16px;
+    font-size: 20px;
     border: none;
     padding: 5px 20px;
     background: #fff;
-    border: 1px solid #dedede;
+    border: 1px solid #000b;
     border-radius: 12px;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5px;
+    gap: 10px;
     font-weight: 500;
     transition: all 0.3s ease;
 }
 
 .hero .left-section .top .buttons button i{
-    font-size: 16px;
+    font-size: 18px;
 }
 
-.hero .left-section .top .buttons button.doc,
+.hero .left-section .top .buttons button.doc, 
 .contact .items .item button{
-    background: #000b;
+    background-color: #000b;
     color: #fff;
+    margin-left:15px;
 }
 
 .hero .left-section .top .buttons .button.git:hover{
-    background: #000;
-    color: #fff;
+    background: #000b;
+    color:#fff;
     border-color: transparent;
 }
 
@@ -182,6 +179,7 @@ nav button i{
     width: fit-content;
 }
 
+
 .about{
     display: flex;
     align-items: center;
@@ -192,17 +190,17 @@ nav button i{
 }
 
 .about > p{
-    font-size: 14px;
-    color:#606060;
-    border: 1px solid #e8e8e8;
+    font-size: 24px;
+    color: #606060;
+    border: 1px border #e8e8e8;
     padding: 6px 14px;
     border-radius: 16px;
     margin-bottom: 12px;
     background: #fff;
 }
 
-.about > h2{
-    font-size: 22px;
+/*.about > h2{
+    font-size: 18px;
     text-align: center;
     margin-bottom: 30px;
 }
@@ -210,7 +208,7 @@ nav button i{
 .about .items{
     display: flex;
     justify-content: center;
-    gap:24px;
+    gap: 24px;
 }
 
 .about .items .item{
@@ -240,7 +238,6 @@ nav button i{
     color: #000;
     margin-bottom: 10px;
     display: block;
-
 }
 
 .about .items .item .inner p{
@@ -249,12 +246,12 @@ nav button i{
 }
 
 .projects{
-    padding: 0 24 px;
+    padding: 0 24px;
     background: #f5f5f5;
 }
 
-projects .inner{
-    background: #1f1f1f;
+.projects .inner{
+    background: #f1f1f1;
     color: #fff;
     padding: 70px;
     border-radius: 24px;
@@ -266,7 +263,7 @@ projects .inner{
     color: #d8d8d8;
     border: 1px solid #484848;
     display: inline-block;
-    padding: 6px 12px;
+    padding: 6px;
     border-radius: 20px;
 }
 
@@ -277,7 +274,7 @@ projects .inner{
 
 .projects .inner > h2{
     font-size: 38px;
-    margin-bottom: 24px;
+    margin-top: 24px;
 }
 
 .projects .inner p.info{
@@ -326,12 +323,12 @@ projects .inner{
     line-height: 24px;
 }
 
-.contact{
-    padding: 100px 60px;
+.contac{
+    padding-inline: 100px 60px;
     background: #f5f5f5;
 }
 
-.contact > h2{
+.contact >h2{
     font-size: 36px;
     margin-bottom: 40px;
 }
@@ -352,14 +349,13 @@ projects .inner{
     border-radius: 12px 0 0 12px;
 }
 
-
 .contact .items .item:nth-child(2){
     border-radius: 0 12px 12px 0;
 }
 
 .contact .items .item a{
     font-size: 24px;
-    color: #000;
+    color:#000;
     display: inline-block;
     margin-bottom: 16px;
 }
@@ -375,7 +371,7 @@ projects .inner{
 }
 
 footer{
-    background: #1f1f1f;
+    background-color: #1f1f1f;
     border-radius: 24px 24px 0 0;
     padding: 30px;
     display: flex;
@@ -396,7 +392,6 @@ footer a:hover{
 }
 
 @media screen and (max-width: 1280px){
-
     .hero .left-section .top h2{
         font-size: 25px;
     }
@@ -407,7 +402,7 @@ footer a:hover{
 
     .hero .left-section .top .buttons button,
     .projects .inner > button,
-    .contact .items .item button{
+    .contac .items .item button{
         font-size: 14px;
         padding: 8px 14px;
     }
@@ -422,7 +417,7 @@ footer a:hover{
 
     .about .items .item .inner a,
     .projects .inner > p.info,
-    .contact .items .item p{
+    .contac .items .item p{
         font-size: 15px;
     }
 
@@ -442,8 +437,8 @@ footer a:hover{
     .contact .item a{
         font-size: 18px;
     }
-}
 
+}
 
 @media screen and (max-width: 992px){
 
@@ -575,4 +570,10 @@ footer a:hover{
         font-size: 11px;
     }
 }
+
+
+
+
+
+
 
