--- a/style1.css
+++ b/style1.css
@@ -245,14 +245,14 @@ nav button i{
     font-size: 15px;
 }
 
-/*.projects{
+.projects{
     padding: 0 24px;
     background: #f5f5f5;
 }
 
 .projects .inner{
     background: #f1f1f1;
-    color: #fff;
+    color: #000;
     padding: 70px;
     border-radius: 24px;
 }
@@ -279,7 +279,7 @@ nav button i{
 
 .projects .inner p.info{
     font-size: 18px;
-    color: #dedede;
+    color: #0f0e0e;
     margin-bottom: 24px;
 }
 
@@ -299,7 +299,7 @@ nav button i{
     padding: 32px 24px;
     height: 250px;
     width: 24%;
-    background: #262626;
+    background: #8f8c8c;
 }
 
 .projects .inner .items .item i{
@@ -307,23 +307,23 @@ nav button i{
     border: 1px solid #606060;
     border-radius: 10px;
     padding: 10px;
-    background: #303030;
+    background: #706b6b;
 }
 
 .projects .inner .items .item a{
     display: block;
     margin: 24px 0 14px;
-    color: #fff;
+    color: #0d0c0c;
     font-size: 20px;
 }
 
 .projects .inner .items .item p{
-    color: #a1a1a1;
+    color: #fff;
     font-size: 16px;
     line-height: 24px;
 }
 
-.contac{
+/*.contac{
     padding-inline: 100px 60px;
     background: #f5f5f5;
 }
