--- a/style1.css
+++ b/style1.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+html{
+    scroll-behavior: smooth;
+}
 
 *{
     margin: 0;
@@ -45,7 +48,7 @@ nav .nav-links{
 
 nav .nav-links a{
     font-size: 20px;
-    color: #606060;
+    color: #141313;
     transition: all 0.3s ease;
 }
 
@@ -313,7 +316,7 @@ nav button i{
 .projects .inner .items .item a{
     display: block;
     margin: 24px 0 14px;
-    color: #0d0c0c;
+    color: #f7f0f0;
     font-size: 20px;
 }
 
@@ -323,14 +326,16 @@ nav button i{
     line-height: 24px;
 }
 
-/*.contac{
+.contac{
     padding-inline: 100px 60px;
     background: #f5f5f5;
 }
 
 .contact >h2{
-    font-size: 36px;
+    font-size: 28px;
     margin-bottom: 40px;
+    margin-left: 90px;
+    margin-top: 20px;
 }
 
 .contact .items{
@@ -347,15 +352,13 @@ nav button i{
 
 .contact .items .item:nth-child(1){
     border-radius: 12px 0 0 12px;
+    margin-left: 90px;
 }
 
-.contact .items .item:nth-child(2){
-    border-radius: 0 12px 12px 0;
-}
 
 .contact .items .item a{
     font-size: 24px;
-    color:#000;
+    color:#c0b1b1;
     display: inline-block;
     margin-bottom: 16px;
 }
@@ -368,6 +371,7 @@ nav button i{
 
 .contact .items .item button{
     padding: 10px 24px;
+    color: #fff;
 }
 
 footer{
@@ -378,6 +382,7 @@ footer{
     align-items: center;
     justify-content: center;
     gap: 20px;
+    margin-top: 30px;
 }
 
 footer p,
