--- a/style1.css
+++ b/style1.css
@@ -316,7 +316,7 @@ nav button i{
 .projects .inner .items .item a{
     display: block;
     margin: 24px 0 14px;
-    color: #f7f0f0;
+    color: #352424;
     font-size: 20px;
 }
 
